--- a/upstream/sass/_elements.sass
+++ b/upstream/sass/_elements.sass
@@ -49,7 +49,7 @@
         border: none
     & code
         font-size: 0.9rem
-        font-family: 'Source Code Pro', monospace
+        font-family: 'Fira Code', monospace
         padding: 0.1rem
         border-radius: 3px
         border: 1px solid $links
