--- a/upstream/sass/_elements.sass
+++ b/upstream/sass/_elements.sass
@@ -38,13 +38,30 @@
     & .highlight
         width: 100%
     & pre
+        position: relative
         line-height: 2rem
-        border-radius: 3px
+        border-radius: 10px
         padding: 1rem
         overflow-x: auto
-        background-color: $code-block
         width: 100%
         margin-bottom: 1em
+        background-color: transparent !important
+        &:before
+          content: ""
+          position: absolute
+          top: 0
+          left: 0
+          z-index: -1
+          margin: 0px
+          padding: 0px
+          width: 100%
+          height: 100%
+          display: block
+
+          background: radial-gradient(ellipse at 16.7% -10%, hsla(0, 0%, 30%, 0.44) 24%, hsla(0, 0%, 30%, 0.4) 25%, hsla(0, 0%, 30%, 0.2) 45%, hsla(0, 0%, 30%, 0.1))
+          background-size: 300% 100%
+          border-radius: 10px
+          box-shadow: 0 2px 1px hsla(0, 0%, 30%, 0.5) inset, 0 -2px 1px hsla(250, 70%, 5%, 0.3) inset, 0 -2px 6px hsla(0, 0%, 30%, 0.25)
     & pre > code
         border: none
     & code
