fix the size the text can use for large and small screen

--- a/upstream/sass/style.sass
+++ b/upstream/sass/style.sass
@@ -68,7 +68,9 @@ hr
 .wrap
     margin: 0 auto
     margin-top: 6rem
-    width: 45%
+    width: 720px
+    min-width: 45%
+    max-width: 1080px
     @media screen and (max-width: 736px)
         padding: 1rem
         width: 100%
