--- a/upstream/sass/style.sass
+++ b/upstream/sass/style.sass
@@ -119,6 +119,25 @@ hr
         border-bottom: none
         display: contents
 
+html
+  scrollbar-color: gray black
+
+::-webkit-scrollbar
+  width: 20px
+
+/* Track */
+::-webkit-scrollbar-track
+  background: black
+
+/* Handle */
+::-webkit-scrollbar-thumb
+  background: grey
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover
+  background: darkgrey
+
+
 @import "elements"
 
 // Helpers
